<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="always"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:requiresFadingEdge="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_64">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_64"
                android:contentDescription="@string/soho_label"
                android:src="@drawable/ic_soho_house_logo" />

            <com.sohohouse.seven.common.views.TextInputContainer
                android:id="@+id/text_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:background="@drawable/sign_in_input_field_background"
                android:divider="@drawable/sign_in_input_field_background_normal"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:showDividers="middle">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_field"
                    style="@style/AppTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:hint="@string/login_email_label"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingTop="@dimen/dp_13"
                    android:paddingEnd="@dimen/dp_16">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input"
                        style="@style/Body.016"
                        android:fontFamily="sans-serif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:lineSpacingExtra="5sp"
                        android:paddingTop="13dp"
                        android:paddingBottom="11dp"
                        tools:text="My Email Address"
                        tools:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_field"
                    style="@style/AppTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:hint="@string/login_password_label"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingEnd="@dimen/dp_16"
                    app:passwordToggleDrawable="@drawable/ic_eye"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        style="@style/Body.016"
                        android:fontFamily="sans-serif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:lineSpacingExtra="5sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.sohohouse.seven.common.views.TextInputContainer>

            <TextView
                android:id="@+id/error_message"
                style="@style/Body.014"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_7"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@string/login_failed_credentials_message"
                android:textColor="?attr/colorSignInError"
                android:visibility="gone"
                tools:textColor="@color/mexican_red"
                tools:visibility="visible" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/sign_in_btn"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login_cta" />

        <TextView
            android:id="@+id/forgot_pw_btn"
            style="@style/TextLink.01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center_horizontal"
            android:text="@string/login_password_forgotten_label" />

        <TextView
            android:id="@+id/sign_up_btn"
            style="@style/Body.014.Narrow.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_18"
            android:gravity="center_horizontal"
            tools:text="Not a member yet? Create an account" />

        <TextView
            android:id="@+id/application_version"
            style="@style/label_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_7"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:gravity="center_horizontal"
            android:text="@string/more_app_version_label"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/prod_btn"
            style="@style/TextLink.01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_12"
            android:gravity="center_horizontal"
            android:visibility="gone"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <com.sohohouse.seven.common.views.LoadingView
        android:id="@+id/fragment_sign_in_loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>