...
    <string name="app_onboarding_house_board_header">Introducing Noticeboard</string>
    <string name="app_onboarding_house_board_supporting">Post to connect with fellow members, plus get daily updates about House happenings</string>
    <string name="app_onboarding_posting_cta">Next</string>
    <string name="app_onboarding_posting_header">Noticeboard</string>
    <string name="app_onboarding_posting_supporting">Post and connect with fellow members, plus get daily updates about House happenings</string>
    <string name="app_onboarding_welcome_cta">Next</string>
    <string name="app_onboarding_welcome_header">Welcome to Soho House</string>
    <string name="app_onboarding_welcome_supporting">Let\'s show you around</string>
    <string name="app_update_header">Update your app</string>
    <string name="app_update_supporting">The latest version of Soho House is now available. Update to continue</string>
    <string name="app_update_update_cta">Update</string>
    <string name="bedrooms_amsterdam_label">Soho House Amsterdam</string>
    <string name="bedrooms_babington_label">Babington House</string>
...
